--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -1,4 +1,13 @@
-.post {
-    border: 1px solid lightskyblue;
+.post-render {
+    border: 1px solid #61dafb;
     padding: 5px;
+    margin: 7px;
+}
+.link-details {
+    color: white;
+    border: 1px solid #20232a;
+    background: #20232a;
+    border-radius: 5px;
+    padding: 3px;
+    font-size: 10px;
 }
