--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.chosen-user-render {
-  background: lightgrey;
-  width: 600px;
-  margin: 20px;
-  text-align: center;
+.app {
+    text-align: center;
 }
